--- a/package.json
+++ b/package.json
@@ -66,7 +66,24 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.(t|j)s$": [
+        "ts-jest",
+        {
+          "tsconfig": {
+            "baseUrl": ".",
+            "paths": {
+              "@/*": ["src/*"],
+              "@/config/*": ["src/config/*"],
+              "@/database/*": ["src/database/*"],
+              "@/modules/*": ["src/modules/*"],
+              "@/common/*": ["src/common/*"]
+            }
+          }
+        }
+      ]
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1"
     },
     "collectCoverageFrom": ["**/*.(t|j)s"],
     "coverageDirectory": "../coverage",
