--- a/package.json
+++ b/package.json
@@ -106,6 +106,17 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/",
+      "/test/",
+      ".*\\.spec\\.ts$"
+    ],
     "testEnvironment": "node"
   }
 }
