--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.28.2",
   "scripts": {
     "build": "nest build",
     "format": "biome format --write .",
@@ -40,6 +40,10 @@
     "@nestjs/swagger": "^11.2.5",
     "@prisma/client": "^5.20.0",
     "ioredis": "^5.3.2",
+    "joi": "^17.13.3",
+    "nestjs-pino": "^4.5.0",
+    "pino-http": "^10.0.0",
+    "pino-pretty": "^11.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
