chore(prisma): add prisma validate command to package.json SC-71

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "prisma:seed": "ts-node prisma/seed.ts",
+    "prisma:validate": "prisma validate",
     "prepare": "lefthook install"
   },
   "dependencies": {
