--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.5",
+    "swagger-ui-express": "^5.0.1",
     "@prisma/client": "^5.20.0",
     "ioredis": "^5.3.2",
     "joi": "^17.13.3",
