--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prisma:studio": "prisma studio",
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:validate": "prisma validate",
-    "prepare": "lefthook install"
+    "prepare": "is-ci || lefthook install"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -40,17 +40,17 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.5",
     "@nestjs/terminus": "^11.0.0",
-    "swagger-ui-express": "^5.0.1",
     "@prisma/client": "^5.20.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "ioredis": "^5.3.2",
     "joi": "^17.13.3",
     "nestjs-pino": "^4.5.0",
     "pino-http": "^10.0.0",
     "pino-pretty": "^11.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -62,6 +62,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "is-ci": "^4.1.0",
     "jest": "^30.0.0",
     "lefthook": "^1.7.9",
     "prisma": "^5.20.0",
