--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kime-api",
-  "version": "1.0.0-beta.1",
+  "version": "1.1.0-beta.2",
   "description": "",
   "author": "",
   "private": true,
@@ -57,7 +57,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
@@ -65,7 +66,10 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@semantic-release/exec": "^7.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-google-oauth20": "^2.0.14",
