--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,12 @@ JWT_SECRET=your-jwt-secret-change-in-production
 JWT_EXPIRES_IN=7d
 
 # ============================================
+# Seed (prisma db seed)
+# ============================================
+# Required in production when running seed. In dev, falls back to a default if unset.
+# ADMIN_SEED_PASSWORD=
+
+# ============================================
 # Optional: Redis Individual Configuration
 # (Only used if REDIS_URL is not provided)
 # ============================================
