--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "is-ci": "^4.1.0",
     "jest": "^30.0.0",
     "jest-junit": "^16.0.0",
+    "jest-mock-extended": "^4.0.0",
     "lefthook": "^1.7.9",
     "prisma": "^5.20.0",
     "source-map-support": "^0.5.21",
