fix: merge develop to main (#23)
Co-authored-by: semantic-release-bot <semantic-release-bot@martynus.net>
Co-authored-by: deepsource-autofix[bot] <62050782+deepsource-autofix[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kime-api",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.2",
   "description": "",
   "author": "",
   "private": true,
@@ -50,6 +50,7 @@
     "joi": "^17.13.3",
     "nestjs-pino": "^4.5.0",
     "nestjs-zod": "^4.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pino-http": "^10.0.0",
@@ -69,12 +70,14 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "is-ci": "^4.1.0",
     "jest": "^30.0.0",
     "jest-junit": "^16.0.0",
+    "jest-mock-extended": "^4.0.0",
     "lefthook": "^1.7.9",
     "prisma": "^5.20.0",
     "source-map-support": "^0.5.21",
