--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,16 +8,21 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
-
+    # Eliminamos el bloque permissions porque usaremos el token de la App
     steps:
+      - name: Generate Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.BOT_APP_ID }}
+          private-key: ${{ secrets.BOT_PRIVATE_KEY }}
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          # IMPORTANTE: Usar el token aquí configura el origin de Git con bypass
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
@@ -28,24 +33,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-workspace
         env:
           COREPACK_ENABLE_STRICT: 0
 
-      - name: Install Semantic Release globally
+      - name: Install Semantic Release Plugins
         run: npm install -g semantic-release @semantic-release/changelog @semantic-release/git @semantic-release/exec @semantic-release/github @semantic-release/npm
       
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_PRIVATE_KEY }}
-      
       - name: Release
-        run: semantic-release
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
       
@@ -55,8 +54,14 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
+          # Actualizamos las referencias locales
+          git fetch origin develop
           git checkout develop
-            git merge origin/main --ff-only || git merge origin/main --strategy-option theirs
-            git push origin develop
-          env:
-            GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+          
+          # Intentamos mergear los cambios de main (incluyendo el commit de versión)
+          git merge origin/main --ff-only || git merge origin/main --strategy-option theirs
+          
+          git push origin develop
+        env:
+          # Usamos el token de la App para saltar la protección de develop
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
