--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,6 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    # Eliminamos el bloque permissions porque usaremos el token de la App
     steps:
       - name: Generate Token
         uses: actions/create-github-app-token@v1
@@ -21,13 +20,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # IMPORTANTE: Usar el token aquí configura el origin de Git con bypass
           token: ${{ steps.app-token.outputs.token }}
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
         with:
           version: 9
+          run_install: false 
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -36,7 +35,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile --ignore-workspace
+        run: pnpm install --frozen-lockfile
         env:
           COREPACK_ENABLE_STRICT: 0
 
@@ -63,5 +62,4 @@ jobs:
           
           git push origin develop
         env:
-          # Usamos el token de la App para saltar la protección de develop
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
