--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,11 +54,11 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
-          git fetch origin develop
+          git fetch origin main
           git checkout develop
           
-          git merge origin/main --no-ff -m "chore(ci): sync main back to develop [skip ci]" || git merge origin/main --strategy-option theirs -m "chore(ci): sync main back to develop [skip ci]"
+          git reset --hard origin/main
           
-          git push origin develop
+          git push origin develop --force
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
