--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [main, develop] # Se activa en ambas ramas
+    branches: [main, develop] 
   pull_request:
     branches: [main, develop]
 
 jobs:
-  # Combinamos lint, build y test para ahorrar tiempo y no descargar pnpm 4 veces
+  
   quality-check:
     name: Lint, Build & Test
     runs-on: ubuntu-latest
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Necesario para que DeepSource analice el historial
+          fetch-depth: 0 
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -30,15 +30,14 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run Biome check
-        run: pnpm check # Ejecuta tu linter Biome
+        run: pnpm check 
 
       - name: Build project
         run: pnpm build
 
       - name: Run tests with coverage
-        run: pnpm test:cov # Genera el lcov.info
+        run: pnpm test:cov 
 
-      # --- NUEVO: Reporte a DeepSource ---
       - name: Report coverage to DeepSource
         run: |
           curl https://deepsource.io/cli | sh
@@ -46,18 +45,18 @@ jobs:
         env:
           DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
 
-      # --- Opcional: Mantener Codecov por ahora ---
       - name: Upload to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage/lcov.info,./coverage/junit.xml # Agregamos el XML aquí
+          files: ./coverage/lcov.info,./coverage/junit.xml 
           fail_ci_if_error: false
 
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
-        uses: codecov/test-results-action@v1
+        uses: codecov/codecov-action@v5
         with:
+          report_type: lcov,junit
           token: ${{ secrets.CODECOV_TOKEN }}
   
   
