--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-validator": "^0.14.3",
     "ioredis": "^5.9.3",
     "joi": "^17.13.3",
+    "nestjs-cls": "^6.2.0",
     "nestjs-pino": "^4.5.0",
     "nestjs-zod": "^4.3.1",
     "passport-google-oauth20": "^2.0.0",
