--- a/package.json
+++ b/package.json
@@ -51,11 +51,14 @@
     "nestjs-cls": "^6.2.0",
     "nestjs-pino": "^4.5.0",
     "nestjs-zod": "^4.3.1",
+    "nodemailer": "^8.0.1",
+    "otplib": "^13.3.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pino-http": "^10.5.0",
     "pino-pretty": "^11.3.0",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "swagger-ui-express": "^5.0.1",
@@ -72,9 +75,11 @@
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.19.11",
+    "@types/nodemailer": "^7.0.9",
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.3",
     "is-ci": "^4.1.0",
     "jest": "^30.2.0",
