--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/swagger": "^11.2.6",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^5.22.0",
+    "@types/passport-github2": "^1.2.9",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -53,6 +54,7 @@
     "nestjs-zod": "^4.3.1",
     "nodemailer": "^8.0.1",
     "otplib": "^13.3.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
