--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
       "main.ts"
     ],
     "transformIgnorePatterns": [
-      "/node_modules/(?!(otplib|@otplib|@scure|uint8arraytools)/)"
+      "node_modules/(?!(.pnpm|otplib|@otplib|@scure|uint8arraytools|@noble)/)"
     ],
     "testEnvironment": "node"
   },
