feat(tests): add Jest setup configuration for improved testing environment

--- a/package.json
+++ b/package.json
@@ -99,6 +99,9 @@
     "typescript": "^5.9.3"
   },
   "jest": {
+    "setupFiles": [
+      "<rootDir>/jest.setup.ts"
+    ],
     "moduleFileExtensions": [
       "js",
       "json",
